...
        android:layout_marginEnd="8dp"
        android:text="@string/bank"
        app:layout_constraintTop_toBottomOf="@id/my_profile_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_button" />
...
